--- a/CSS/inventario.css
+++ b/CSS/inventario.css
@@ -3,6 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+.body{
+    width: 100vw;
+}
 .header, 
 .encabezado{
     text-align: center;
@@ -12,7 +15,6 @@
     padding: 100px 0;
 }
 .seccion__formulario{
-    /* border: solid; */
     width: 80%;
     margin: auto;
 }
@@ -23,7 +25,7 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    width: 100%;
+    width: 18%;
 }
 .texto{
     border: .5px solid;
@@ -56,6 +58,7 @@
     color: #fff;
     background-color: #84a98c;
     text-decoration: none;
+    cursor: pointer;
 }
 /** Tabla */
 .center{
